--- a/grails-app/assets/stylesheets/bootstrap.css
+++ b/grails-app/assets/stylesheets/bootstrap.css
@@ -1834,6 +1834,11 @@ pre code {
   border: 0;
 }
 
+.form-control1{
+  width: 50%;
+  background-color: #fff;
+
+}
 .form-control:focus {
   color: #495057;
   background-color: #fff;
