first Commmit dated 05/05/2020

--- a/grails-app/assets/stylesheets/bootstrap.css
+++ b/grails-app/assets/stylesheets/bootstrap.css
@@ -50,9 +50,9 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-@-ms-viewport {
-  width: device-width;
-}
+/*@-ms-viewport {*/
+/*  width: device-width;*/
+/*}*/
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
@@ -1823,11 +1823,11 @@ pre code {
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-@media screen and (prefers-reduced-motion: reduce) {
-  .form-control {
-    transition: none;
-  }
-}
+/*@media screen and (prefers-reduced-motion: reduce) {*/
+/*  .form-control {*/
+/*    transition: none;*/
+/*  }*/
+/*}*/
 
 .form-control::-ms-expand {
   background-color: transparent;
@@ -2309,11 +2309,11 @@ textarea.form-control {
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-@media screen and (prefers-reduced-motion: reduce) {
-  .btn {
-    transition: none;
-  }
-}
+/*@media screen and (prefers-reduced-motion: reduce) {*/
+/*  .btn {*/
+/*    transition: none;*/
+/*  }*/
+/*}*/
 
 .btn:hover, .btn:focus {
   text-decoration: none;
@@ -2938,11 +2938,11 @@ input[type="button"].btn-block {
   transition: opacity 0.15s linear;
 }
 
-@media screen and (prefers-reduced-motion: reduce) {
-  .fade {
-    transition: none;
-  }
-}
+/*@media screen and (prefers-reduced-motion: reduce) {*/
+/*  .fade {*/
+/*    transition: none;*/
+/*  }*/
+/*}*/
 
 .fade:not(.show) {
   opacity: 0;
@@ -2959,11 +2959,11 @@ input[type="button"].btn-block {
   transition: height 0.35s ease;
 }
 
-@media screen and (prefers-reduced-motion: reduce) {
-  .collapsing {
-    transition: none;
-  }
-}
+/*@media screen and (prefers-reduced-motion: reduce) {*/
+/*  .collapsing {*/
+/*    transition: none;*/
+/*  }*/
+/*}*/
 
 .dropup,
 .dropright,
@@ -3763,11 +3763,11 @@ input[type="button"].btn-block {
   appearance: none;
 }
 
-@media screen and (prefers-reduced-motion: reduce) {
-  .custom-range::-webkit-slider-thumb {
-    transition: none;
-  }
-}
+/*@media screen and (prefers-reduced-motion: reduce) {*/
+/*  .custom-range::-webkit-slider-thumb {*/
+/*    transition: none;*/
+/*  }*/
+/*}*/
 
 .custom-range::-webkit-slider-thumb:active {
   background-color: #b3d7ff;
@@ -3794,11 +3794,11 @@ input[type="button"].btn-block {
   appearance: none;
 }
 
-@media screen and (prefers-reduced-motion: reduce) {
-  .custom-range::-moz-range-thumb {
-    transition: none;
-  }
-}
+/*@media screen and (prefers-reduced-motion: reduce) {*/
+/*  .custom-range::-moz-range-thumb {*/
+/*    transition: none;*/
+/*  }*/
+/*}*/
 
 .custom-range::-moz-range-thumb:active {
   background-color: #b3d7ff;
@@ -3827,11 +3827,11 @@ input[type="button"].btn-block {
   appearance: none;
 }
 
-@media screen and (prefers-reduced-motion: reduce) {
-  .custom-range::-ms-thumb {
-    transition: none;
-  }
-}
+/*@media screen and (prefers-reduced-motion: reduce) {*/
+/*  .custom-range::-ms-thumb {*/
+/*    transition: none;*/
+/*  }*/
+/*}*/
 
 .custom-range::-ms-thumb:active {
   background-color: #b3d7ff;
@@ -3864,13 +3864,13 @@ input[type="button"].btn-block {
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-@media screen and (prefers-reduced-motion: reduce) {
-  .custom-control-label::before,
-  .custom-file-label,
-  .custom-select {
-    transition: none;
-  }
-}
+/*@media screen and (prefers-reduced-motion: reduce) {*/
+/*  .custom-control-label::before,*/
+/*  .custom-file-label,*/
+/*  .custom-select {*/
+/*    transition: none;*/
+/*  }*/
+/*}*/
 
 .nav {
   display: -ms-flexbox;
@@ -5083,11 +5083,11 @@ input[type="button"].btn-block {
   transition: width 0.6s ease;
 }
 
-@media screen and (prefers-reduced-motion: reduce) {
-  .progress-bar {
-    transition: none;
-  }
-}
+/*@media screen and (prefers-reduced-motion: reduce) {*/
+/*  .progress-bar {*/
+/*    transition: none;*/
+/*  }*/
+/*}*/
 
 .progress-bar-striped {
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -5379,11 +5379,11 @@ button.close {
   transform: translate(0, -25%);
 }
 
-@media screen and (prefers-reduced-motion: reduce) {
-  .modal.fade .modal-dialog {
-    transition: none;
-  }
-}
+/*@media screen and (prefers-reduced-motion: reduce) {*/
+/*  .modal.fade .modal-dialog {*/
+/*    transition: none;*/
+/*  }*/
+/*}*/
 
 .modal.show .modal-dialog {
   -webkit-transform: translate(0, 0);
@@ -5844,13 +5844,13 @@ button.close {
   transition: transform 0.6s ease, -webkit-transform 0.6s ease;
 }
 
-@media screen and (prefers-reduced-motion: reduce) {
-  .carousel-item.active,
-  .carousel-item-next,
-  .carousel-item-prev {
-    transition: none;
-  }
-}
+/*@media screen and (prefers-reduced-motion: reduce) {*/
+/*  .carousel-item.active,*/
+/*  .carousel-item-next,*/
+/*  .carousel-item-prev {*/
+/*    transition: none;*/
+/*  }*/
+/*}*/
 
 .carousel-item-next,
 .carousel-item-prev {
@@ -6601,7 +6601,7 @@ button.bg-dark:focus {
 }
 
 .justify-content-around {
-  -ms-flex-pack: distribute !important;
+  /*-ms-flex-pack: distribute !important;*/
   justify-content: space-around !important;
 }
 
@@ -6756,7 +6756,7 @@ button.bg-dark:focus {
     justify-content: space-between !important;
   }
   .justify-content-sm-around {
-    -ms-flex-pack: distribute !important;
+    /*-ms-flex-pack: distribute !important;*/
     justify-content: space-around !important;
   }
   .align-items-sm-start {
@@ -6895,7 +6895,7 @@ button.bg-dark:focus {
     justify-content: space-between !important;
   }
   .justify-content-md-around {
-    -ms-flex-pack: distribute !important;
+    /*-ms-flex-pack: distribute !important;*/
     justify-content: space-around !important;
   }
   .align-items-md-start {
@@ -7034,7 +7034,7 @@ button.bg-dark:focus {
     justify-content: space-between !important;
   }
   .justify-content-lg-around {
-    -ms-flex-pack: distribute !important;
+    /*-ms-flex-pack: distribute !important;*/
     justify-content: space-around !important;
   }
   .align-items-lg-start {
@@ -7173,7 +7173,7 @@ button.bg-dark:focus {
     justify-content: space-between !important;
   }
   .justify-content-xl-around {
-    -ms-flex-pack: distribute !important;
+    /*-ms-flex-pack: distribute !important;*/
     justify-content: space-around !important;
   }
   .align-items-xl-start {
