--- a/grails-app/assets/stylesheets/bootstrap.css
+++ b/grails-app/assets/stylesheets/bootstrap.css
@@ -2309,6 +2309,25 @@ textarea.form-control {
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
+.butn {
+  margin: 30px;
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 0.9rem;
+  line-height: 5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
 /*@media screen and (prefers-reduced-motion: reduce) {*/
 /*  .btn {*/
 /*    transition: none;*/
@@ -2343,6 +2362,12 @@ fieldset:disabled a.btn {
   border-color: #007bff;
 }
 
+.butn-primary {
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
 .btn-primary:hover {
   color: #fff;
   background-color: #0069d9;
@@ -2368,6 +2393,11 @@ fieldset:disabled a.btn {
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
+}
+
+.butn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
+.show > .butn-primary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
 }
 
@@ -2912,6 +2942,13 @@ fieldset:disabled a.btn {
   border-radius: 0.3rem;
 }
 
+.butn-lg, .butn-group-lg > .butn {
+  padding: 0.5rem 1rem;
+  font-size: 0.9rem;
+  line-height: 1.5;
+  border-radius: 0.3rem;
+}
+
 .btn-sm, .btn-group-sm > .btn {
   padding: 0.25rem 0.5rem;
   font-size: 0.875rem;
@@ -2923,6 +2960,11 @@ fieldset:disabled a.btn {
   display: block;
   width: 100%;
 }
+
+.butn-blk {
+  display: block;
+}
+
 
 .btn-block + .btn-block {
   margin-top: 0.5rem;
@@ -4334,7 +4376,7 @@ input[type="button"].btn-block {
 }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.5);
+  /*color: rgba(255, 255, 255, 0.5);*/
 }
 
 .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
@@ -4966,7 +5008,11 @@ input[type="button"].btn-block {
 .alert-success hr {
   border-top-color: #b1dfbb;
 }
+.form-control1{
+  width: 50%;
+  background-color: #fff;
 
+}
 .alert-success .alert-link {
   color: #0b2e13;
 }
@@ -7351,6 +7397,9 @@ button.bg-dark:focus {
     z-index: 1020;
   }
 }
+i{
+  cursor:pointer;
+}
 
 .sr-only {
   position: absolute;
@@ -9032,4 +9081,5 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6;
   }
 }
+
 /*# sourceMappingURL=bootstrap.css.map */
