--- a/grails-app/assets/stylesheets/grails.css
+++ b/grails-app/assets/stylesheets/grails.css
@@ -31,43 +31,54 @@ pre {
     margin-bottom: 0px;
     padding-right: 110px;
 }
+
 .navbar .container {
     margin: 10px;
 }
+
 .navbar-dark a {
     /*color: #ffffff !important;*/
     font-size: 18px !important;
     text-decoration: none;
 }
+
 .grails-icon img {
     width: 40px;
 
 }
+
 .navbar-dark, .navbar-static-top {
     background-color: #117a8b;
     border: 0px;
 }
+
 a.navbar-brand {
     color: white !important;
     font-size: 19px !important;
 }
-.navbar-dark .navbar-nav>.active>a, .navbar-dark .navbar-nav>.active>a:hover, .navbar-dark .navbar-nav>.active>a:focus {
+
+.navbar-dark .navbar-nav > .active > a, .navbar-dark .navbar-nav > .active > a:hover, .navbar-dark .navbar-nav > .active > a:focus {
     background-color: transparent;
     color: white;
 }
-.navbar-nav>li.active>a {
+
+.navbar-nav > li.active > a {
     color: white !important;
 }
-.navbar-nav>li>a:hover {
+
+.navbar-nav > li > a:hover {
     /*background-color: #2559a7 !important;*/
-    color:  black!important;
+    color: black !important;
 }
-.navbar-nav>li>a {
+
+.navbar-nav > li > a {
     color: black;
 }
+
 .navbar-dark .navbar-toggler .icon-bar {
     background-color: white;
 }
+
 .navbar-dark .navbar-toggle:hover, .navbar-dark .navbar-toggle:focus {
     background-color: #2559a7;
 }
@@ -86,8 +97,8 @@ a.navbar-brand {
 }
 
 .nav .dropdown a.dropdown-toggle {
-    padding-top: 0px;
-    padding-bottom: 0px;
+    padding-top: 2px;
+    padding-bottom: 2px;
 }
 
 @media (min-width: 768px) {
@@ -108,7 +119,7 @@ a.navbar-brand {
     }
 }
 
-#fork-me{
+#fork-me {
     position: fixed;
     padding: 0px 50px 0px 50px;
     top: 40px;
@@ -131,16 +142,16 @@ a.navbar-brand {
 
 #band {
     /*grey =#808080*/
-    background: #2559a7  no-repeat 50% 30%;
+    background: #2559a7 no-repeat 50% 30%;
     height: 400px;
 }
 
 .svg #band {
-    background-image: url(../img/grails-cupsonly-logo-white.svg);
+    /*background-image: url(../img/grails-cupsonly-logo-white.svg);*/
 }
 
 .no-svg #band {
-    background-image: url(../img/groovy-logo-white.png);
+    /*background-image: url(../img/groovy-logo-white.png);*/
 }
 
 @media (max-width: 1010px) {
@@ -647,7 +658,7 @@ h8 {
     display: block;
     width: 80px;
     height: 80px;
-    background-image: url(../images/icons-colset-2-its.png);
+    /*background-image: url(../images/icons-colset-2-its.png);*/
     float: left;
     margin-top: 12px;
     margin-right: 15px
@@ -1077,10 +1088,12 @@ html, body, .st-container, .st-pusher, .st-content {
         float: none;
     }
 }
-#design{
+
+#design {
     padding: 70px;
     font-weight: bold;
 }
+
 .column {
     float: left;
     width: 92%;
@@ -1094,6 +1107,7 @@ html, body, .st-container, .st-pusher, .st-content {
     clear: both;
     display: table;
 }
+
 ul li {
     border: 1px solid #ddd;
     margin-top: -1px; /* Prevent double borders */
@@ -1106,33 +1120,78 @@ ul li {
     display: block;
     position: relative;
 }
+
 ul li:hover {
     background-color: white;
 }
+
 .msg-box.successfully {
     border: 2px solid #5bc644;
     background-color: #eeffea;
     font-size: 20px;
 }
+
 .msg-box.warn {
-    border:1px solid #e6b800;
+    border: 1px solid #e6b800;
     font-size: 20px;
-    background-color:#ffffcc;
+    background-color: #ffffcc;
 }
+
 .msg-box.error {
     border: 1px solid #f24024;
     background-color: #f6dcff;
 }
-.bold-txt
-{
+
+.bold-txt {
     font-weight: bold;
-    font-family:'Pragmatica_Bold', Arial, Helvetica, sans-serif !important;
+    font-family: 'Pragmatica_Bold', Arial, Helvetica, sans-serif !important;
 }
-.home-redirect
-{
+
+.home-redirect {
 
     width: 0%;
     padding: 2px;
     font-size: 20px;
     display: block;
+}
+
+#main-heading {
+    color: #32272F;
+    letter-spacing: 0.64px;
+    /*font-family: "Neue Haas Grotesk Display Std", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;*/
+    font-weight: 500;
+    font-size: x-large;
+}
+
+#myDIV {
+    width: 1000px;
+    height: 400px;
+    border: 1px ridge #000000;
+    position: absolute;
+    left: 82px;
+}
+
+.shadowbox {
+    width: 4em;
+    /*border: 1px solid #333;*/
+    /*box-shadow: 2px 2px 2px #444;*/
+    /*padding: 8px 12px;*/
+    /*background-image: linear-gradient(180deg, #fff, #ddd 40%, #ccc);*/
+    background-color: #fefefe;
+
+    border: 1px solid;
+    padding: 10px;
+    box-shadow: 5px 10px #888888;
+
+}
+
+.center {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.hideform {
+    display: none;
 }
