--- a/grails-app/assets/stylesheets/grails.css
+++ b/grails-app/assets/stylesheets/grails.css
@@ -1195,3 +1195,44 @@ ul li:hover {
 .hideform {
     display: none;
 }
+
+#main-heading {
+    color: #32272F;
+    letter-spacing: 0.64px;
+    /*font-family: "Neue Haas Grotesk Display Std", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;*/
+    font-weight: 500;
+    font-size: x-large;
+}
+
+#myDIV {
+    width: 1000px;
+    height: 400px;
+    border: 1px ridge #000000;
+    position: absolute;
+    left: 82px;
+}
+
+.shadowbox {
+    width: 4em;
+    /*border: 1px solid #333;*/
+    /*box-shadow: 2px 2px 2px #444;*/
+    /*padding: 8px 12px;*/
+    /*background-image: linear-gradient(180deg, #fff, #ddd 40%, #ccc);*/
+    background-color: #fefefe;
+
+    border: 1px solid;
+    padding: 10px;
+    box-shadow: 5px 10px #888888;
+
+}
+
+.center {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.hideform {
+    display: none;
+}
