--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5, h6 {
 
 html {
     background-color: #ddd;
-    background-image: -moz-linear-gradient(center top, #aaa, #ddd);
+    /*background-image: -moz-linear-gradient(center top, #aaa, #ddd);*/
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #aaa), color-stop(1, #ddd));
     background-image: linear-gradient(to bottom, #aaa, #ddd);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorStr = '#aaaaaa', EndColorStr = '#dddddd');
@@ -114,7 +114,7 @@ img {
 }
 
 .spinner {
-    background: url(../images/spinner.gif) 50% 50% no-repeat transparent;
+    /*background: url(../images/spinner.gif) 50% 50% no-repeat transparent;*/
     height: 16px;
     width: 16px;
     padding: 0.5em;
@@ -183,16 +183,16 @@ img {
 }
 
 .nav a.home {
-    background-image: url(../images/skin/house.png);
+    /*background-image: url(../images/skin/house.png);*/
 }
 
 .nav a.list {
-    background-image: url(../images/skin/database_table.png);
+    /*background-image: url(../images/skin/database_table.png);*/
 }
 
-.nav a.create {
-    background-image: url(../images/skin/database_add.png);
-}
+/*.nav a.create {*/
+/*    background-image: url(../images/skin/database_add.png);*/
+/*}*/
 
 .nav li.dropdown.show ul.dropdown-menu {
     background-color: #424649;
@@ -350,12 +350,12 @@ fieldset.embedded legend {
 
 .errors li {
     list-style: none;
-    background: transparent url(../images/skin/exclamation.png) 0.5em 50% no-repeat;
+    /*background: transparent url(../images/skin/exclamation.png) 0.5em 50% no-repeat;*/
     text-indent: 2.2em;
 }
 
 .message {
-    background: transparent url(../images/skin/information.png) 0.5em 50% no-repeat;
+    /*background: transparent url(../images/skin/information.png) 0.5em 50% no-repeat;*/
     text-indent: 2.2em;
 }
 
@@ -450,13 +450,13 @@ th.sortable a {
     padding-right: 1.1em;
 }
 
-th.asc a {
-    background-image: url(../images/skin/sorted_asc.gif);
-}
+/*th.asc a {*/
+/*    background-image: url(../images/skin/sorted_asc.gif);*/
+/*}*/
 
-th.desc a {
-    background-image: url(../images/skin/sorted_desc.gif);
-}
+/*th.desc a {*/
+/*    background-image: url(../images/skin/sorted_desc.gif);*/
+/*}*/
 
 .odd {
     background: #f7f7f7;
@@ -564,13 +564,13 @@ th:hover, tr:hover {
     text-indent: 25px;
 }
 
-.buttons .delete {
-    background-image: url(../images/skin/database_delete.png);
-}
+/*.buttons .delete {*/
+/*    background-image: url(../images/skin/database_delete.png);*/
+/*}*/
 
-.buttons .edit {
-    background-image: url(../images/skin/database_edit.png);
-}
+/*.buttons .edit {*/
+/*    background-image: url(../images/skin/database_edit.png);*/
+/*}*/
 
 .buttons .save {
     background-image: url(../images/skin/database_save.png);
@@ -598,87 +598,3 @@ img.grails-logo {
 {
     display:none;
 }
-
-#animated-cards .card-header {
-    height: 200px;
-    background-color: #156971;
-}
-
-#animated-cards .service-icon {
-    font-size: 30px;
-    color: black;
-    opacity: 0.4;
-    font-size: 60px;
-}
-
-#animated-cards .heading-card {
-    margin-top: 20px;
-    font-size: 45px;
-}
-
-#animated-cards .cardheader-text {
-    color: #fff;
-}
-
-#animated-cards .card-text.sub-text-color {
-    color: #8c8c8c;
-}
-
-#animated-cards .card-text:last-child {
-    font-size: 30px;
-    color: #595959;
-}
-
-#animated-cards .cardheader-subtext {
-    font-size: 20px;
-}
-
-#animated-cards .card.cards-shadown {
-    box-shadow: 2px 2px 30px #aaaaaa;
-}
-
-#animated-cards {
-    margin: 40px;
-}
-
-#animated-cards .col {
-    padding: 20px 7px 0px 7px;
-}
-
-#animated-cards .card:hover {
-    -webkit-transform: scale(1.2);
-    -moz-transform: scale(1.2);
-    -o-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    transform: scale(1.2);
-    transition: all 1s;
-    z-index: 99;
-}
-
-#animated-cards .card {
-    transition: all 1s;
-    height: 100%;
-}
-
-
-#animated-cards .card-header:first-child:hover {
-    background-color: #d3dfc9;
-}
-
-#animated-cards .card:hover .card-header:first-child {
-    background-color: #19c4df;
-}
-
-#animated-cards .card:hover .service-icon {
-    -webkit-transform: translateX(10px) translateY(10px) scale(1.3);
-    -moz-transform: translateX(10px) translateY(10px) scale(1.3);
-    -o-transform: translateX(10px) translateY(10px) scale(1.3);
-    -ms-transform: translateX(10px) translateY(10px) scale(1.3);
-    transform: translateX(10px) translateY(10px) scale(1.3);
-    transition: all 1s;
-}
-
-#animated-cards .card .service-icon {
-    transition: all 1s;
-}
-
