--- a/grails-app/assets/stylesheets/bootstrap.css
+++ b/grails-app/assets/stylesheets/bootstrap.css
@@ -2309,24 +2309,8 @@ textarea.form-control {
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-.butn {
-  margin: 30px;
-  display: inline-block;
-  font-weight: 400;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
-  font-size: 0.9rem;
-  line-height: 5;
-  border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
+.margin {
+  margin: 30px;}
 
 /*@media screen and (prefers-reduced-motion: reduce) {*/
 /*  .btn {*/
@@ -2362,18 +2346,6 @@ fieldset:disabled a.btn {
   border-color: #007bff;
 }
 
-.butn-primary {
-  color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
-}
-
-.butn-primary {
-  color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
-}
-
 .btn-primary:hover {
   color: #fff;
   background-color: #0069d9;
@@ -2399,11 +2371,6 @@ fieldset:disabled a.btn {
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
-}
-
-.butn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
-.show > .butn-primary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
 }
 
@@ -2948,20 +2915,6 @@ fieldset:disabled a.btn {
   border-radius: 0.3rem;
 }
 
-.butn-lg, .butn-group-lg > .butn {
-  padding: 0.5rem 1rem;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  border-radius: 0.3rem;
-}
-
-.butn-lg, .butn-group-lg > .butn {
-  padding: 0.5rem 1rem;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  border-radius: 0.3rem;
-}
-
 .btn-sm, .btn-group-sm > .btn {
   padding: 0.25rem 0.5rem;
   font-size: 0.875rem;
@@ -2972,10 +2925,6 @@ fieldset:disabled a.btn {
 .btn-block {
   display: block;
   width: 100%;
-}
-
-.butn-blk {
-  display: block;
 }
 
 
