Template integration, UI refresh and listing by file type functionality added

--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -559,7 +559,7 @@ img.grails-logo {
 
 #animated-cards .card-header {
     height: 200px;
-    background-color: #156971;
+    background-color: #2196F3;
 }
 
 #animated-cards .service-icon {
