--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -103,10 +103,8 @@ img {
     color: #ffffff;
     clear: both;
     font-size: 1em;
-    margin-top: 1.5em;
-    padding: 1em;
-    padding-bottom: 2em;
-    min-height: 1em;
+    padding: 0.5em;
+    min-height: 0.5em;
 }
 
 .footer a {
@@ -640,3 +638,20 @@ img.grails-logo {
     transition: all 1s;
 }
 
+.file-preview1 {
+    background: #fefffd;
+    border: 0px solid #fffff7;
+    display: inline-table;
+    float: right;
+    width: 10px;
+    height: 10px;
+    text-align: left;
+}
+
+
+.file-preview1:hover {
+    -ms-transform: scale(32.5); /* IE 9 */
+    -webkit-transform: scale(32.5); /* Safari 3-8 */
+    transform: scale(32.5);
+
+}
