--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -557,7 +557,7 @@ img.grails-logo {
 
 #animated-cards .card-header {
     height: 200px;
-    background-color: #2196f3;
+    background-color: #3f51b5;
 }
 
 #animated-cards .service-icon {
@@ -622,7 +622,7 @@ img.grails-logo {
 }
 
 #animated-cards .card:hover .card-header:first-child {
-    background-color: #19c4df;
+    background-color: #1962df;
 }
 
 #animated-cards .card:hover .service-icon {
