Changes in register and create user

--- a/grails-app/assets/stylesheets/grails.css
+++ b/grails-app/assets/stylesheets/grails.css
@@ -1160,7 +1160,7 @@ ul li:hover {
 }
 /* The switch - the box around the slider */
 .switch {
-    position: relative;
+    position: absolute;
     display: inline-block;
     width: 30px;
     height: 17px;
