--- a/grails-app/assets/stylesheets/bootstrap.css
+++ b/grails-app/assets/stylesheets/bootstrap.css
@@ -5483,7 +5483,7 @@ button.close {
   -ms-flex-pack: end;
   justify-content: flex-end;
   padding: 1rem;
-  border-top: 1px solid #e9ecef;
+  /*border-top: 1px solid #e9ecef;*/
 }
 
 .modal-footer > :not(:first-child) {
