--- a/grails-app/assets/stylesheets/bootstrap.css
+++ b/grails-app/assets/stylesheets/bootstrap.css
@@ -3018,7 +3018,7 @@ input[type="button"].btn-block {
   left: auto;
 }
 
-.dropup .dropdown-menu {
+.dropup .dropdown-menu  {
   top: auto;
   bottom: 100%;
   margin-top: 0;
@@ -3346,7 +3346,7 @@ input[type="button"].btn-block {
   margin-left: -1px;
 }
 
-.input-group > .form-control:focus,
+.input-group >
 .input-group > .custom-select:focus,
 .input-group > .custom-file .custom-file-input:focus ~ .custom-file-label {
   z-index: 3;
