--- a/grails-app/assets/stylesheets/grails.css
+++ b/grails-app/assets/stylesheets/grails.css
@@ -1222,9 +1222,9 @@ input:checked + .slider:before {
 /* Dropdown menu */
 .dropbtn {
     background-color: white;
-    color: white;
+    color: black;
     padding: 3px;
-    font-size: 16px;
+    font-size: 13px;
     border: none;
 }
 
@@ -1242,40 +1242,17 @@ input:checked + .slider:before {
     z-index: 1;
 }
 
-.dropdown-content a {
+.dropdown-content .dropbtn {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     font-size: 13px;
+    background-color: #f1f1f1!important;
 }
 
-.dropdown-content a:hover {background-color: #3f51b5;color: white;}
+.dropdown-content .dropbtn:hover {background-color: white;color: #3f51b5;}
 
-.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropdown-content {display: block; }
 
 .dropdown:hover .dropbtn {background-color: snow;}
-/* Navigation Bar */
-.topnav {
-    overflow: hidden;
-    background-color: #333;
-}
-
-.topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-.active {
-    background-color: #4CAF50;
-    color: white;
-}
-
-.topnav .icon {
-    display: none;
-}
